06.Networking/ingress-app-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      run: app-v1
  template:
    metadata:
      labels:
        run: app-v1
        name: app-v1
    spec:
      containers:
      - image: moonjukhim/app-v1:1.0.0
        name: app-v1
        ports:
        - containerPort: 8080
          protocol: TCP
