06.Networking/ingress-app-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      run: app-v2
  template:
    metadata:
      labels:
        run: app-v2
        name: app-v2
    spec:
      containers:
      - image: moonjukhim/app-v2:1.0.0
        name: app-v2
        ports:
        - containerPort: 8080
          protocol: TCP
