06.Networking/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-service
spec:
  type: LoadBalancer
  loadBalancerIP: 35.232.27.7  # 할당 받은 고정 외부 IP로 변경해야 함!!!
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
