06.Networking/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: ClusterIP
  selector:
    app: app-v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
