06.Networking/ingress-create.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "global-ingress"
spec:
  rules:
  - http:
      paths:
      - path: /v1
        backend:
          serviceName: my-service
          servicePort: 80
      - path: /v2
        backend:
          serviceName: lb-service
          servicePort: 80
