06.Networking/ingress-svc.yaml
apiVersion: app/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "global-ingress"
spec:
  rules:
  - http:
      Paths:
     - path: /v1
        backend:
          serviceName: my-service
          servicePort: 80
      - path: /v2
        backend:
          serviceName: lb-service
          servicePort: 80
